# whynes

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENCE  Makefile  README.md  cartridge.py  cartrige.py  console.py  cpu.py  instructions.py  instructions.txt  logger.py  memory.py  opcodes.py  pyproject.toml  requirements.txt  snake.py  tests.py  ui.css  utils.py
src/: cartridge.py  console.py  constants.py  cpu.py  instructions.py  instructions.txt  logger.py  memory.py  opcodes.py  snake.py  test_cpu.py  ui.py
tests/: test_computation_pipeline.py  test_cpu.py  test_nestest_rom.py  test_opcodes.py  utils.py
whynes/: 2022-11-13.md
whynes/.obsidian/: workspace.json
