[project]
name = "whynes"
version = "0.1"
authors = [
  { name="Thomas Crha", email="thomas@9bitbyte.com" },
]
description = "asnd"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "astroid==2.15.5",
    "black==23.3.0",
    "cfgv==3.3.1",
    "click==8.1.3",
    "colorama==0.4.6",
    "coverage==7.2.7",
    "debugpy==1.6.7",
    "dill==0.3.6",
    "distlib==0.3.6",
    "evdev==1.6.1",
    "exceptiongroup==1.1.1",
    "filelock==3.12.2",
    "identify==2.5.24",
    "importlib-metadata==6.8.0",
    "iniconfig==2.0.0",
    "isort==5.12.0",
    "lazy-object-proxy==1.9.0",
    "linkify-it-py==2.0.2",
    "markdown-it-py==3.0.0",
    "mccabe==0.7.0",
    "mdit-py-plugins==0.4.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.0.0",
    "nodeenv==1.8.0",
    "numpy==1.25.0",
    "packaging==23.1",
    "pathspec==0.11.1",
    "platformdirs==3.7.0",
    "pluggy==1.2.0",
    "pre-commit==3.3.3",
    "psutil==5.9.5",
    "pydantic==1.10.9",
    "pygame==2.5.0",
    "Pygments==2.15.1",
    "pylint==2.17.4",
    "pynput==1.7.6",
    "PySDL2==0.9.16",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pytest-lazy-fixture==0.6.3",
    "python-xlib==0.33",
    "PyYAML==6.0",
    "rich==13.4.2",
    "six==1.16.0",
    "taskipy==1.11.0",
    "textual==0.29.0",
    "tomli==2.0.1",
    "tomlkit==0.11.8",
    "typing_extensions==4.6.3",
    "uc-micro-py==1.0.2",
    "virtualenv==20.23.1",
    "wrapt==1.15.0",
    "zipp==3.15.0",
]

[project.optional-dependencies]
test = [
    "black",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.isort]
profile = "black"
src_paths = ["src"]
lines_between_sections = 0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
skip_glob = '*/.ipynb_checkpoints/*'

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''

