[project]
name = "whynes"
version = "0.1"
authors = [
  { name="Thomas Crha", email="thomas@9bitbyte.com" },
]
description = "asnd"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "alabaster==0.7.13",
    "annotated-types==0.6.0",
    "Babel==2.13.1",
    "certifi==2023.7.22",
    "charset-normalizer==3.3.1",
    "docutils==0.19",
    "evdev==1.6.1",
    "idna==3.4",
    "imagesize==1.4.1",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "none==0.1.1",
    "numpy==1.26.1",
    "packaging==23.2",
    "pydantic==2.4.2",
    "pydantic_core==2.10.1",
    "pygame==2.5.2",
    "Pygments==2.16.1",
    "pynput==1.7.6",
    "python-xlib==0.33",
    "requests==2.31.0",
    "rfc3986==2.0.0",
    "six==1.16.0",
    "snowballstemmer==2.2.0",
    "Sphinx==5.3.0",
    "sphinxcontrib-applehelp==1.0.7",
    "sphinxcontrib-devhelp==1.0.5",
    "sphinxcontrib-htmlhelp==2.0.4",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.6",
    "sphinxcontrib-serializinghtml==1.1.9",
    "sphinxcontrib-websupport==1.2.6",
    "typing_extensions==4.8.0",
    "urllib3==2.0.7",
]

[project.optional-dependencies]
test = [
    "black",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.isort]
profile = "black"
src_paths = ["src"]
lines_between_sections = 0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
skip_glob = '*/.ipynb_checkpoints/*'

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''

