[project]
name = "whynes"
version = "0.1"
authors = [
  { name="Thomas Crha", email="thomas@9bitbyte.com" },
]
description = "asnd"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

dependencies = [
    "numpy",
    "pygame",
    "pynput",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "debugpy"
]

[tool.isort]
profile = "black"
src_paths = ["src"]
lines_between_sections = 0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 200
skip_gitignore = true
skip_glob = '*/.ipynb_checkpoints/*'

[tool.black]
line-length = 200
include = '\.pyi?$'
exclude = '''
/(
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
